--- a/src/components/Cursor/cursor.css
+++ b/src/components/Cursor/cursor.css
@@ -1,4 +1,4 @@
-*, html, body {
+/* *, html, body {
     cursor: none;
 }
 .cursor {
@@ -37,4 +37,16 @@
     width: 50px;
     height: 50px;
     opacity: .5;
+  } */
+
+  .circle {
+    --circle-size: 40px;
+    position: fixed;
+    height: var(--circle-size);
+    width: var(--circle-size);
+    border: 1px solid black;
+    border-radius: 100%;
+    top: calc(var(--circle-size) / 2 * -1);
+    left: calc(var(--circle-size) / 2 * -1);
+    pointer-events: none;
   }
