--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 body, html {
   margin: 0;
-  cursor: none;
+  /* cursor: none; */
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -46,7 +46,7 @@ code {
   background: #555;
 }
 a, link, button, li {
-  cursor: none;
+  /* cursor: none; */
 }
 @tailwind base;
 @tailwind components;
